--- a/raytracing-grid/index.html
+++ b/raytracing-grid/index.html
@@ -14,6 +14,7 @@
   </style>
   <script src="../p5.min.js"></script>
   <script src="config.js"></script>
+  <script src="utils.js"></script>
   <script src="grid.js"></script>
   <script src="player.js"></script>
   <script src="sketch.js"></script>
